objects/TaxCondition__c.object
<CustomObject>
    <description>Account Tax Condition</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <inlineHelpText>Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TaxConditions</relationshipLabel>
        <relationshipName>TaxConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivationDate__c</fullName>
        <description>Account Activation Date</description>
        <inlineHelpText>Account Activation Date</inlineHelpText>
        <label>Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activo</fullName>
                    <default>true</default>
                    <label>Activo</label>
                </value>
                <value>
                    <fullName>Cancelada</fullName>
                </value>
                <value>
                    <fullName>Inactivo</fullName>
                </value>
                <value>
                    <fullName>Por Aprobar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TaxCondition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{000000}</displayFormat>
        <label>TaxCondition</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TaxConditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>